# hackathon

./: .gitignore  WHC.py  api_server.py  demo.py  model.py  pyproject.toml  study.py
data_dump/: dim_asset.parquet  dim_asset_fbf_object_link.parquet  dim_asset_frame_link.parquet  dim_frame.parquet  dim_frame_factory_frame.parquet  dim_frame_fbf_object_link.parquet  dim_hazard.parquet  dim_hazard_specification.parquet  dim_object.parquet  dim_process.parquet  dim_project.parquet  dim_subprocess.parquet  dim_task.parquet  load.sql  raw_object.parquet  raw_risk_profiling.parquet  schema.sql  seed_asset.parquet  seed_asset_process_link.parquet  seed_frame_factory_customer.parquet  seed_frame_factory_hierarchy.parquet  stg_object.parquet  stg_risk_profiling.parquet
refit/: __init__.py  data.py  fit.py  orderings.py  scoring.py  workflow.py
reorder-app/: index.html  package-lock.json  package.json
reorder-app/public/: risk_summary.csv
reorder-app/src/: App.jsx  index.css
